Yoon: Icon dark mode fix

--- a/main/style/style.css
+++ b/main/style/style.css
@@ -222,7 +222,7 @@ footer a:hover {
     width: 100%;
     font-size: 2rem;
     justify-self: left;
-    color: var(--Black);
+    color: var(--text-color);
     text-decoration: none;
 }
 
